src/examples/type_errors/Reclassification2.sol
pragma solidity ^0.5.0;

contract Addition {

    address owner;

    uint@owner a1;
    uint a2;
    uint@all b;

	function f() {
	    require(owner == me);
		b = a1 + a2;
	}
}
